dynamodb service implemented

--- a/token-datamart/pom.xml
+++ b/token-datamart/pom.xml
@@ -14,4 +14,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.12.634</version>
+        </dependency>
+    </dependencies>
 </project>
