--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### IntelliJ IDEA ###
 out/
-!**/src/Main/**/out/
+!**/src/com.gitradar.Main/**/out/
 !**/src/test/**/out/
 
 ### Eclipse ###
@@ -12,7 +12,7 @@ out/
 .springBeans
 .sts4-cache
 bin/
-!**/src/Main/**/bin/
+!**/src/com.gitradar.Main/**/bin/
 !**/src/test/**/bin/
 
 ### NetBeans ###
