--- a/token-datamart/pom.xml
+++ b/token-datamart/pom.xml
@@ -20,5 +20,15 @@
             <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>1.12.634</version>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 </project>
