--- a/token-datamart/src/main/resources/Dockerfile
+++ b/token-datamart/src/main/resources/Dockerfile
@@ -5,7 +5,7 @@ COPY token-datamart-1.0.jar /usr/src/app
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "token-datamart-1.0.jar"]
+ENTRYPOINT ["java", "-jar", "token-datamart-1.0.jar", "http://host.docker.internal"]
 
 # docker build -t token-datamart .
-# docker run -p 8080:8080 --name token-datamart --env AWS_ACCESS_KEY_ID=test --env AWS_SECRET_ACCESS_KEY=test token-datamart
+# docker run -d -p 8080:8080 --name token-datamart --env AWS_ACCESS_KEY_ID=test --env AWS_SECRET_ACCESS_KEY=test token-datamart
