--- a/token-datamart/src/main/resources/Dockerfile
+++ b/token-datamart/src/main/resources/Dockerfile
@@ -8,4 +8,4 @@ EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "token-datamart-1.0.jar", "http://host.docker.internal"]
 
 # docker build -t token-datamart .
-# docker run -d -p 8080:8080 --name token-datamart --env AWS_ACCESS_KEY_ID=test --env AWS_SECRET_ACCESS_KEY=test token-datamart
+termi
