--- a/tokenizer/pom.xml
+++ b/tokenizer/pom.xml
@@ -32,11 +32,16 @@
             <version>1.2.3</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.16.0</version>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.634</version>
+            <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-eventbridge</artifactId>
+            <version>1.12.644</version>
+        </dependency>
     </dependencies>
 
     <build>
