--- a/.github/workflows/tokenizer-ci.yml
+++ b/.github/workflows/tokenizer-ci.yml
@@ -1,14 +1,10 @@
-name: Tokenizer CI
+name: Java CI
 
 on:
   push:
-    branches:
-      - develop
     paths:
       - 'tokenizer/**'
   pull_request:
-    branches:
-      - develop
     paths:
       - 'tokenizer/**'
 
