--- a/.github/workflows/tokenizer-ci.yml
+++ b/.github/workflows/tokenizer-ci.yml
@@ -9,10 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
+        run: |
+          sudo apt-get install openjdk-17-jdk
+          echo "Java version"
+          java -version
       - name: Build and test with Maven
         run: |
           cd tokenizer
-          mvn test
+          mvn test # Or any other Maven goals you want to run
