--- a/.github/workflows/tokenizer-ci.yml
+++ b/.github/workflows/tokenizer-ci.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Build and test with Maven
         run: |
           cd tokenizer
-          mvn test # Or any other Maven goals you want to run
+          mvn test
